--- a/Sistema/nbproject/project.properties
+++ b/Sistema/nbproject/project.properties
@@ -32,7 +32,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.MyLibraryJARPER.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
