--- a/Sistema/nbproject/private/private.properties
+++ b/Sistema/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Anderson\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.jcalendar-1.4.jar=C:\\Users\\ander\\Documents\\Git\\Consultorio\\Sistema\\jcalendar-1.4.jar
+user.properties.file=C:\\Users\\ander\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
